add counter and buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <body>
         <div>Timer</div>
         <div>Board</div>
+        <div id="div-counter">
+            Liczydełko: 
+            <button id="span-counter-decrease" onclick="counterDecrementBy1()">-1</button>
+            <span id="span-counter"></span>
+            <button id="span-counter-increase" onclick="counterIncrementBy1()">+1</button>
+        </div>
         <div>
             Aktywny user to: 
             <span  id="message"></span>
