add message based on user input

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
         <title>Taka gierka że ojezu</title>
     </head>
     <body>
+        <div id="div-welcome">
+            Masz jakieś imię? 
+            <input id="welcome-input" type="text" onblur="welcomeMessage()"></input>
+            <span id="welcome-span"></span>
+        </div>
         <div>Timer</div>
         <div>Board</div>
         <div id="div-counter">
