obsługa pustegu inputu

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <div id="div-welcome">
             Masz jakieś imię? 
             <input id="welcome-input" type="text" onblur="welcomeMessage()"></input>
-            <span id="welcome-span"></span>
         </div>
+        <div id="div-welcome-message"><br></div>
         <div>Timer</div>
         <div>Board</div>
         <div id="div-counter">
