counting clicks on div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         </div>
         <div id="div-welcome-message"><br></div>
         <div>Timer</div>
+        <div id="div-magda" onclick="countClicks('Magda')">Magda</div>
+        <div id="div-kamila" onclick="countClicks('Kamila')">Kamila</div>
+        <div id="div-tomek" onclick="countClicks('Tomek')">Tomek</div>
+        <div id="div-last-selected"></div>
         <div>Board</div>
         <div id="div-counter">
             Liczydełko: 
