--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="div-magda" onclick="countClicks('Magda')">Magda</div>
         <div id="div-kamila" onclick="countClicks('Kamila')">Kamila</div>
         <div id="div-tomek" onclick="countClicks('Tomek')">Tomek</div>
-        <div id="div-last-selected"></div>
+        <div id="div-last-selected"><br></div>
         <div>Board</div>
         <div id="div-counter">
             Liczydełko: 
