more playing with forin loop

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Taka gierka że ojezu</title>
+        <title>Taka gierka że omatkoicórko</title>
     </head>
     <body>
         <div id="div-welcome">
