--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Taka gierka że omatkoicórko</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="div-welcome">
@@ -14,6 +15,7 @@
         <div id="div-tomek" onclick="countClicks('Tomek')">Tomek</div>
         <div id="div-last-selected"><br></div>
         <div>Board</div>
+        <div id="div-circle">placeholder</div>
         <div id="div-counter">
             Liczydełko: 
             <button id="span-counter-decrease" onclick="counterDecrementBy1()">-1</button>
