--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         </div>
         <div id="div-welcome-message"><br></div>
         <div>Timer</div>
-        <div id="div-magda" onclick="countClicks('Magda')">Magda</div>
-        <div id="div-kamila" onclick="countClicks('Kamila')">Kamila</div>
-        <div id="div-tomek" onclick="countClicks('Tomek')">Tomek</div>
+        <div>
+        <div id="div-magda" class="inline" onclick="countClicks('Magda')">Magda</div>
+        <div id="div-kamila" class="inline" onclick="countClicks('Kamila')">Kamila</div>
+        <div id="div-tomek"  class="inline" onclick="countClicks('Tomek')">Tomek</div>
+        </div>
         <div id="div-last-selected"><br></div>
         <div>Board</div>
         <div id="div-circle">placeholder</div>
