--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </div>
         <div id="div-last-selected"><br></div>
         <div>Board</div>
-        <div id="div-circle">placeholder</div>
+        <div id="square">
+        <div id="circle"></div>
+        </div>
         <div id="div-counter">
             Liczydełko: 
             <button id="span-counter-decrease" onclick="counterDecrementBy1()">-1</button>
