moving user switch functions to another file

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
         </div>
         <div>Comments</div>
         <script src="script.js"></script>
+        <script src="developedFunctions.js"></script>
+        <script src="switchUser.js"></script>
     </body>
 </html>
