--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
         <script src="script.js"></script>
         <script src="developedFunctions.js"></script>
         <script src="switchUser.js"></script>
+        <script src="counterUpdate.js"></script>
+        <script src="helpers.js"></script>
+        <script src="countClicks.js"></script>
+        
     </body>
 </html>
