start modyfiing color

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <script src="switchUser.js"></script>
         <script src="counterUpdate.js"></script>
         <script src="countClicks.js"></script>
-        
+        <script src="changeCircle.js"></script>        
     </body>
 </html>
