--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="square">
         <div id="circle"></div>
         </div>
-        <button id="color-button" onclick="changeColor()">Change circle color</button>
+        <button id="color-button" onclick="cycleColor()">Change circle color</button>
         <div id="div-counter">
             Liczydełko: 
             <button id="span-counter-decrease" onclick="counterDecrementBy1()">-1</button>
