--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="app"></div>
         <div id="div-welcome">
             Masz jakieś imię? 
             <input id="welcome-input" type="text" onblur="welcomeMessage()"></input>
@@ -40,5 +41,6 @@
         <script src="counterUpdate.js"></script>
         <script src="countClicks.js"></script>
         <script src="changeCircle.js"></script>        
+        <script src="bundle.js"></script>        
     </body>
 </html>
